syntax = "proto3";

package rivet.backend.upload;

import "proto/common.proto";

enum Provider {
	MINIO = 0;
	BACKBLAZE = 1;
	AWS = 2;
}

message Upload {
	reserved 5;

	string bucket = 6;
	rivet.common.Uuid upload_id = 1;
	int64 create_ts = 2;
	uint64 content_length = 3;
	optional int64 complete_ts = 4;
	optional int64 deleted_ts = 7;
	optional rivet.common.Uuid user_id = 8;
	Provider provider = 9;
}

message UploadFile {
	reserved 5, 6;

	rivet.common.Uuid upload_id = 1;
	string path = 2;
	optional string mime = 3;
	uint64 content_length = 4;


	/// ID of the multipart upload used to upload parts to this file.
	///
	/// Provided by the S3 API.
	optional string multipart_upload_id = 7;
}

message PrepareFile {
	string path = 1;
	optional string mime = 2;
	uint64 content_length = 3;
	optional float nsfw_score_threshold = 4;
	bool multipart = 5;
}

message PresignedUploadRequest {
	string path = 1;
	string url = 2;
	uint32 part_number = 3;

	uint64 byte_offset = 4;
	uint64 content_length = 5;
}
